--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Poke api make with node.js and express",
   "main": "App.js",
   "scripts": {
-    "start": "node App.js",
+    "start": "node App.js --omit=dev",
     "dev": "nodemon App.js"
   },
   "repository": {
