--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose": "^6.6.5",
     "node-fetch": "^3.2.10",
     "pug": "^3.0.2",
-    "pug-cli": "^1.0.0-alpha6"
+    "pug-cli": "^1.0.0-alpha6",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
